update buttons to handrawn. add hover states

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
         rel="stylesheet">
 </head>
 <body>
-
     <section class="myButtons">
-        <div class="btn" onclick="startAnimate1()">1</div>
-        <div class="btn" onclick="startAnimate2()">2</div>
-        <div class="btn" onclick="startAnimate3()">3</div>
+        <img src="images/buttons/seedBlue.png" alt="seed" class="seed" id="seed" onclick="startAnimate1()"></img>
 
+        <img src="images/buttons/sapBlue.png" alt="sap" class="sap" id="sap" onclick="startAnimate2()"></img>
+    
+        <img src="images/buttons/adultBlue.png" alt="adult" class="adult" id="adult" onclick="startAnimate3()"></img>
     </section>
+
 
     <img id="imageRender" src="images/Asn-1.png" alt="Animation Test" class="animation">
 
