ADDED AUDIO!! I LOVE IT

--- a/index.html
+++ b/index.html
@@ -12,11 +12,38 @@
 
 <body>
     <section class="myButtons">
-        <img src="images/buttons/seedBlue.png" alt="seed" class="seed" id="seed" onclick="startAnimate1()"></img>
+        <img src="images/buttons/seedBlue.png" alt="seed" class="seed" id="seed"></img>
 
-        <img src="images/buttons/sapBlue.png" alt="sap" class="sap" id="sap" onclick="startAnimate2()"></img>
+        <img src="images/buttons/sapBlue.png" alt="sap" class="sap" id="sap"></img>
 
-        <img src="images/buttons/adultBlue.png" alt="adult" class="adult" id="adult" onclick="startAnimate3()"></img>
+        <img src="images/buttons/adultBlue.png" alt="adult" class="adult" id="adult"></img>
+    </section>
+
+    <section>
+        <audio id="myBirds" autoplay loop>
+            <source src="audio/birds.wav" type="audio/wav">
+        </audio>
+
+        <audio id="mySong" autoplay loop>
+            <source src="audio/song.mp3" type="audio/mp3">
+        </audio>
+
+        <audio id="tap">
+            <source src="audio/tap.wav" type="audio/wav">
+        </audio>
+
+        <audio id="dig">
+            <source src="audio/dig.wav" type="audio/wav">
+        </audio>
+
+        <audio id="sapGrow">
+            <source src="audio/sapGrow.wav" type="audio/wav">
+        </audio>
+
+        <audio id="bigGrow">
+            <source src="audio/bigGrow.wav" type="audio/wav">
+        </audio>
+
     </section>
 
 
