added reference page

--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <title>Assignment 3</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@100;300;700&family=Oswald:wght@400;700&display=swap"
-        rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@100;300;700&family=Oswald:wght@400;700&display=swap"
+        rel="stylesheet"> -->
 </head>
 
 <body>
+
+
+    <section class="reference">
+        <a href="references.html" target="_blank">References</a>
+        
+    </section>
+
     <section class="myButtons">
         <img src="images/buttons/seedBlue.png" alt="seed" class="seed" id="seed"></img>
 
