--- a/index.html
+++ b/index.html
@@ -6,55 +6,56 @@
     <title>Assignment 3</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@100;300;700&family=Oswald:wght@400;700&display=swap"
-        rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@100;300;700&family=Oswald:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
 
-    <section class="reference">
+    <section class="minimal">
         <a href="references.html" target="_blank">References</a>
+        <p id="playAudio">Play Audio</p>
         
     </section>
 
     <section class="myButtons">
-        <img src="/images/buttons/seedBlue.png" alt="seed" class="seed" id="seed"></img>
+        <img src="../Assignment 3/images/buttons/seedBlue.png" alt="seed" class="seed" id="seed"></img>
 
-        <img src="/images/buttons/sapBlue.png" alt="sap" class="sap" id="sap"></img>
+        <img src="images/buttons/sapBlue.png" alt="sap" class="sap" id="sap"></img>
 
-        <img src="/images/buttons/adultBlue.png" alt="adult" class="adult" id="adult"></img>
+        <img src="images/buttons/adultBlue.png" alt="adult" class="adult" id="adult"></img>
     </section>
 
     <section>
         <audio id="myBirds" autoplay loop>
-            <source src="/audio/birds.wav" type="audio/wav">
+            <source src="audio/birds.wav" type="audio/wav">
         </audio>
 
         <audio id="mySong" autoplay loop>
-            <source src="/audio/song.mp3" type="audio/mp3">
+            <source src="audio/song.mp3" type="audio/mp3">
         </audio>
 
         <audio id="tap">
-            <source src="/audio/tap.wav" type="audio/wav">
+            <source src="audio/tap.wav" type="audio/wav">
         </audio>
 
         <audio id="dig">
-            <source src="/audio/dig.wav" type="audio/wav">
+            <source src="audio/dig.wav" type="audio/wav">
         </audio>
 
         <audio id="sapGrow">
-            <source src="/audio/sapGrow.wav" type="audio/wav">
+            <source src="audio/sapGrow.wav" type="audio/wav">
         </audio>
 
         <audio id="bigGrow">
-            <source src="/audio/bigGrow.wav" type="audio/wav">
+            <source src="audio/bigGrow.wav" type="audio/wav">
         </audio>
 
     </section>
 
 
-    <img id="imageRender" src="/images/Asn-1.png" alt="Animation Test" class="animation">
+    <img id="imageRender" src="images/Asn-1.png" alt="Animation Test" class="animation">
 
     <!-- <div>
         <button onclick="startAnimate1()">1</button>
