--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
 
     <section class="myButtons">
-        <img src="../Assignment 3/images/buttons/seedBlue.png" alt="seed" class="seed" id="seed"></img>
+        <img src="images/buttons/seedBlue.png" alt="seed" class="seed" id="seed"></img>
 
         <img src="images/buttons/sapBlue.png" alt="sap" class="sap" id="sap"></img>
 
