changed 'play music' to 'ambience'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="minimal">
         <a href="references.html" target="_blank">References</a>
-        <p id="playAudio">Play Audio</p>
+        <p id="playAudio">AMBIENCE</p>
         
     </section>
 
