--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
 </head>
 
 <body>
-
-
     <section class="minimal">
         <a href="references.html" target="_blank">References</a>
         <p id="playAudio">AMBIENCE</p>
-        
     </section>
 
     <section class="myButtons">
@@ -54,22 +51,11 @@
         <audio id="bigGrow">
             <source src="audio/bigGrow.wav" type="audio/wav">
         </audio>
-
     </section>
 
-
-    <img id="imageRender" src="images/Asn-1.png" alt="Animation Test" class="animation">
-
-    <!-- <div>
-        <button onclick="startAnimate1()">1</button>
-
-        <button onclick="startAnimate2()">2</button>
-    
-        <button onclick="startAnimate3()">3</button>
-    </div> -->
-
-    <!-- <img id="imageRender" src="images/AnimationTest-1.png" alt="Animation Test" class="animation"> -->
-
+    <section>
+        <img id="imageRender" src="images/Asn-1.png" alt="Animation Test" class="animation">
+    </section>
 
     <!-- Include jQuery before your custom script -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
