--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
     <section class="minimal">
         <a href="references.html" target="_blank">References</a>
-        <p id="playAudio">AMBIENCE</p>
+        <!-- <p id="Music">Music</p>
+        <p id="onlyBirds">Birds</p> -->
+        <p id="playAudio">Ambience</p>
+        
     </section>
 
     <section class="myButtons">
