music/ambience split options

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <section class="minimal">
         <a href="references.html" target="_blank">References</a>
-        <!-- <p id="Music">Music</p>
-        <p id="onlyBirds">Birds</p> -->
-        <p id="playAudio">Ambience</p>
+        <p id="Music">Music</p>
+        <p id="onlyBirds">Ambience</p>
+        <!-- <p id="playAudio">Both</p> -->
         
     </section>
 
