--- a/index.html
+++ b/index.html
@@ -11,6 +11,71 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@100;300;700&family=Oswald:wght@400;700&display=swap"
         rel="stylesheet">
+
+    <!-- Preload local images -->
+    <div>
+        <link rel="preload" as="image" href="images/buttons/adultBlue.png">
+        <link rel="preload" as="image" href="images/buttons/adultGreen.png">
+        <link rel="preload" as="image" href="images/buttons/sapBlue.png">
+        <link rel="preload" as="image" href="images/buttons/sapGreen.png">
+        <link rel="preload" as="image" href="images/buttons/seedBlue.png">
+        <link rel="preload" as="image" href="images/buttons/seedGreen.png">
+        <link rel="preload" as="image" href="images/Asn-1.png">
+        <link rel="preload" as="image" href="images/Asn-2.png">
+        <link rel="preload" as="image" href="images/Asn-3.png">
+        <link rel="preload" as="image" href="images/Asn-4.png">
+        <link rel="preload" as="image" href="images/Asn-5.png">
+        <link rel="preload" as="image" href="images/Asn-6.png">
+        <link rel="preload" as="image" href="images/Asn-7.png">
+        <link rel="preload" as="image" href="images/Asn-8.png">
+        <link rel="preload" as="image" href="images/Asn-9.png">
+        <link rel="preload" as="image" href="images/Asn-10.png">
+        <link rel="preload" as="image" href="images/Asn-11.png">
+        <link rel="preload" as="image" href="images/Asn-12.png">
+        <link rel="preload" as="image" href="images/Asn-13.png">
+        <link rel="preload" as="image" href="images/Asn-14.png">
+        <link rel="preload" as="image" href="images/Asn-15.png">
+        <link rel="preload" as="image" href="images/Asn-16.png">
+        <link rel="preload" as="image" href="images/Asn-17.png">
+        <link rel="preload" as="image" href="images/Asn-18.png">
+        <link rel="preload" as="image" href="images/Asn-19.png">
+        <link rel="preload" as="image" href="images/Asn-20.png">
+        <link rel="preload" as="image" href="images/Asn-21.png">
+        <link rel="preload" as="image" href="images/Asn-22.png">
+        <link rel="preload" as="image" href="images/Asn-23.png">
+        <link rel="preload" as="image" href="images/Asn-24.png">
+        <link rel="preload" as="image" href="images/Asn-25.png">
+        <link rel="preload" as="image" href="images/Asn-26.png">
+        <link rel="preload" as="image" href="images/Asn-27.png">
+        <link rel="preload" as="image" href="images/Asn-28.png">
+        <link rel="preload" as="image" href="images/Asn-29.png">
+        <link rel="preload" as="image" href="images/Asn-30.png">
+        <link rel="preload" as="image" href="images/Asn-31.png">
+        <link rel="preload" as="image" href="images/Asn-32.png">
+        <link rel="preload" as="image" href="images/Asn-33.png">
+        <link rel="preload" as="image" href="images/Asn-34.png">
+        <link rel="preload" as="image" href="images/Asn-35.png">
+        <link rel="preload" as="image" href="images/Asn-36.png">
+        <link rel="preload" as="image" href="images/Asn-37.png">
+        <link rel="preload" as="image" href="images/Asn-38.png">
+        <link rel="preload" as="image" href="images/Asn-39.png">
+        <link rel="preload" as="image" href="images/Asn-40.png">
+        <link rel="preload" as="image" href="images/Asn-41.png">
+        <link rel="preload" as="image" href="images/Asn-42.png">
+        <link rel="preload" as="image" href="images/Asn-43.png">
+        <link rel="preload" as="image" href="images/Asn-44.png">
+        <link rel="preload" as="image" href="images/Asn-45.png">
+        <link rel="preload" as="image" href="images/Asn-46.png">
+        <link rel="preload" as="image" href="images/Asn-47.png">
+        <link rel="preload" as="image" href="images/Asn-48.png">
+        <link rel="preload" as="image" href="images/Asn-49.png">
+        <link rel="preload" as="image" href="images/Asn-50.png">
+        <link rel="preload" as="image" href="images/Asn-51.png">
+        <link rel="preload" as="image" href="images/Asn-52.png">
+        <link rel="preload" as="image" href="images/Asn-53.png">
+    </div>
+
+
 </head>
 
 <body>
@@ -19,7 +84,7 @@
         <p id="Music">Music</p>
         <p id="onlyBirds">Ambience</p>
         <!-- <p id="playAudio">Both</p> -->
-        
+
     </section>
 
     <section class="myButtons">
