--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Assignment 3</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -80,7 +81,7 @@
 
 <body>
     <section class="minimal">
-        <a href="references.html" target="_blank">References</a>
+        <p><a href="references.html" target="_blank">References</a></p>
         <p id="Music">Music</p>
         <p id="onlyBirds">Ambience</p>
         <!-- <p id="playAudio">Both</p> -->
